--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -69,15 +69,66 @@ jobs:
           name: generated-types
           path: types/
       
+      - name: Create CI workflow file
+        run: |
+          mkdir -p .github/workflows
+          cat > .github/workflows/ci.yml << 'EOF'
+          name: CI Validation
+
+          on:
+            push:
+              branches: [main]
+            pull_request:
+              branches: [main]
+
+          jobs:
+            validate:
+              name: Type Check & Build
+              runs-on: ubuntu-latest
+              
+              steps:
+                - uses: actions/checkout@v4
+                
+                - name: Setup Node.js
+                  uses: actions/setup-node@v4
+                  with:
+                    node-version: '20'
+                    cache: 'npm'
+                
+                - name: Install dependencies
+                  run: npm ci
+                
+                - name: Run Type Check
+                  run: |
+                    npx tsc --noEmit > type-errors.log 2>&1 || {
+                      echo "### ❌ Type Check Failed" >> $GITHUB_STEP_SUMMARY
+                      echo "" >> $GITHUB_STEP_SUMMARY
+                      echo "Copy this error to Claude:" >> $GITHUB_STEP_SUMMARY
+                      echo '```' >> $GITHUB_STEP_SUMMARY
+                      cat type-errors.log >> $GITHUB_STEP_SUMMARY
+                      echo '```' >> $GITHUB_STEP_SUMMARY
+                      exit 1
+                    }
+                    echo "### ✅ Type Check Passed" >> $GITHUB_STEP_SUMMARY
+                
+                - name: Build
+                  run: npm run build
+          EOF
+      
       - name: Push to ${{ matrix.repo }}
         run: |
-          echo "🚀 Pushing types to ${{ matrix.repo }}..."
+          echo "🚀 Pushing to ${{ matrix.repo }}..."
           git clone https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/shabajeric91-sketch/${{ matrix.repo }}.git spoke-repo
+          
           mkdir -p spoke-repo/types
+          mkdir -p spoke-repo/.github/workflows
+          
           cp types/database.types.ts spoke-repo/types/database.types.ts
+          cp .github/workflows/ci.yml spoke-repo/.github/workflows/ci.yml
+          
           cd spoke-repo
           git config user.name "EryAI Schema Bot"
           git config user.email "bot@eryai.tech"
-          git add types/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: sync schema from eryai-core-schema" && git push)
+          git add types/ .github/
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: sync schema and CI from eryai-core-schema" && git push)
           echo "✅ Done with ${{ matrix.repo }}"
