--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -47,11 +47,13 @@ jobs:
           echo "repos=$REPOS" >> $GITHUB_OUTPUT
           echo "Found repos: $REPOS"
       
-      - name: Upload types artifact
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: generated-types
-          path: types/
+          name: broadcast-files
+          path: |
+            types/
+            templates/
 
   broadcast:
     name: Push to ${{ matrix.repo }}
@@ -63,14 +65,40 @@ jobs:
       fail-fast: false
     
     steps:
-      - name: Download types artifact
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: generated-types
-          path: types/
+          name: broadcast-files
+          path: artifacts/
       
-      - name: Create CI workflow file
+      - name: Push to ${{ matrix.repo }}
         run: |
+          echo "🚀 Pushing to ${{ matrix.repo }}..."
+          git clone https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/shabajeric91-sketch/${{ matrix.repo }}.git spoke-repo
+          cd spoke-repo
+          
+          # 1. Synka types
+          mkdir -p types
+          cp ../artifacts/types/database.types.ts types/database.types.ts
+          
+          # 2. Synka jsconfig.json (överskriver)
+          cp ../artifacts/templates/jsconfig.json jsconfig.json
+          
+          # 3. Synka lib/supabase.js (endast om lib/ finns)
+          if [ -d "lib" ]; then
+            cp ../artifacts/templates/lib/supabase.js lib/supabase.js
+          fi
+          
+          # 4. Injicera typescript i package.json om det saknas
+          if [ -f "package.json" ] && ! grep -q '"typescript"' package.json; then
+            if grep -q '"devDependencies"' package.json; then
+              sed -i 's/"devDependencies": {/"devDependencies": {\n    "typescript": "^5.0.0",/' package.json
+            else
+              sed -i 's/}$/,\n  "devDependencies": {\n    "typescript": "^5.0.0"\n  }\n}/' package.json
+            fi
+          fi
+          
+          # 5. Skapa CI workflow
           mkdir -p .github/workflows
           cat > .github/workflows/ci.yml << 'EOF'
           name: CI Validation
@@ -99,35 +127,34 @@ jobs:
                 
                 - name: Run Type Check
                   run: |
-                    npx tsc --noEmit > type-errors.log 2>&1 || {
-                      echo "### ❌ Type Check Failed" >> $GITHUB_STEP_SUMMARY
-                      echo "" >> $GITHUB_STEP_SUMMARY
-                      echo "Copy this error to Claude:" >> $GITHUB_STEP_SUMMARY
-                      echo '```' >> $GITHUB_STEP_SUMMARY
-                      cat type-errors.log >> $GITHUB_STEP_SUMMARY
-                      echo '```' >> $GITHUB_STEP_SUMMARY
-                      exit 1
-                    }
-                    echo "### ✅ Type Check Passed" >> $GITHUB_STEP_SUMMARY
+                    if [ -f "jsconfig.json" ]; then
+                      echo "Running type check with jsconfig.json..."
+                      npx tsc --project jsconfig.json > type-errors.log 2>&1 || {
+                        echo "### ❌ Type Check Failed" >> $GITHUB_STEP_SUMMARY
+                        echo "" >> $GITHUB_STEP_SUMMARY
+                        echo "Copy this error to Claude:" >> $GITHUB_STEP_SUMMARY
+                        echo '```' >> $GITHUB_STEP_SUMMARY
+                        cat type-errors.log >> $GITHUB_STEP_SUMMARY
+                        echo '```' >> $GITHUB_STEP_SUMMARY
+                        exit 1
+                      }
+                      echo "### ✅ Type Check Passed" >> $GITHUB_STEP_SUMMARY
+                    else
+                      echo "### ⏭️ Type Check Skipped (no jsconfig.json)" >> $GITHUB_STEP_SUMMARY
+                    fi
                 
                 - name: Build
-                  run: npm run build
+                  run: |
+                    if grep -q '"build"' package.json 2>/dev/null; then
+                      npm run build
+                    else
+                      echo "No build script found, skipping..."
+                    fi
           EOF
-      
-      - name: Push to ${{ matrix.repo }}
-        run: |
-          echo "🚀 Pushing to ${{ matrix.repo }}..."
-          git clone https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/shabajeric91-sketch/${{ matrix.repo }}.git spoke-repo
           
-          mkdir -p spoke-repo/types
-          mkdir -p spoke-repo/.github/workflows
-          
-          cp types/database.types.ts spoke-repo/types/database.types.ts
-          cp .github/workflows/ci.yml spoke-repo/.github/workflows/ci.yml
-          
-          cd spoke-repo
+          # Commit & Push
           git config user.name "EryAI Schema Bot"
           git config user.email "bot@eryai.tech"
-          git add types/ .github/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: sync schema and CI from eryai-core-schema" && git push)
+          git add .
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: sync schema, jsconfig and CI from eryai-core-schema" && git push)
           echo "✅ Done with ${{ matrix.repo }}"
