--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -81,31 +81,36 @@ jobs:
           mkdir -p types
           cp ../artifacts/types/database.types.ts types/database.types.ts
           
-          # 2. Synka jsconfig.json (överskriver)
+          # 2. Synka jsconfig.json
           cp ../artifacts/templates/jsconfig.json jsconfig.json
           
-          # 3. Fixa package.json (hämta original från git history om trasig)
+          # 3. Fix package.json - restore if corrupted, then update safely
           if [ -f "package.json" ]; then
+            # Check if package.json is valid JSON
+            if ! node -e "JSON.parse(require('fs').readFileSync('package.json', 'utf8'))" 2>/dev/null; then
+              echo "⚠️ package.json is corrupted, finding last valid version..."
+              # Find last commit where package.json was valid
+              for commit in $(git log --oneline -20 --format="%H" -- package.json); do
+                if git show "$commit:package.json" | node -e "JSON.parse(require('fs').readFileSync('/dev/stdin', 'utf8'))" 2>/dev/null; then
+                  echo "✅ Found valid package.json at $commit"
+                  git show "$commit:package.json" > package.json
+                  break
+                fi
+              done
+            fi
+            
+            # Now safely update package.json with Node.js
             node -e "
               const fs = require('fs');
-              let pkg;
               try {
-                pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
-                console.log('✅ package.json is valid');
+                const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
+                pkg.devDependencies = pkg.devDependencies || {};
+                pkg.devDependencies['typescript'] = '^5.0.0';
+                fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2) + '\n');
+                console.log('✅ package.json updated successfully');
               } catch (e) {
-                console.log('⚠️ package.json is corrupted, creating fresh one...');
-                pkg = { 
-                  name: '${{ matrix.repo }}', 
-                  version: '1.0.0', 
-                  dependencies: {
-                    '@supabase/supabase-js': '^2.39.0'
-                  }
-                };
+                console.error('❌ Failed to update package.json:', e.message);
               }
-              if (!pkg.devDependencies) pkg.devDependencies = {};
-              pkg.devDependencies.typescript = '^5.0.0';
-              fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2) + '\n');
-              console.log('✅ package.json updated');
             "
           fi
           
