--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -80,15 +80,20 @@ jobs:
           if [ -f "package.json" ]; then
             DUPES=$(grep -c '"devDependencies"' package.json || echo "0")
             if [ "$DUPES" -gt "1" ]; then
-              for c in $(git log -50 --format="%H" -- package.json); do
-                D=$(git show "$c:package.json" 2>/dev/null | grep -c '"devDependencies"' || echo "0")
-                if [ "$D" -eq "1" ]; then
-                  git show "$c:package.json" > package.json
-                  break
-                fi
-              done
+              echo "Fixing corrupted package.json..."
+              node -e "
+                const fs = require('fs');
+                const content = fs.readFileSync('package.json', 'utf8');
+                const nameMatch = content.match(/\"name\":\s*\"([^\"]+)\"/);
+                const name = nameMatch ? nameMatch[1] : 'unknown';
+                const depsMatch = content.match(/\"dependencies\":\s*\{[^}]*\}/);
+                const deps = depsMatch ? JSON.parse('{' + depsMatch[0] + '}').dependencies : {};
+                const pkg = { name, version: '1.0.0', dependencies: deps, devDependencies: { typescript: '^5.0.0' } };
+                fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
+              "
+            else
+              node -e "const f=require('fs'),p=JSON.parse(f.readFileSync('package.json'));p.devDependencies=p.devDependencies||{};p.devDependencies.typescript='^5.0.0';f.writeFileSync('package.json',JSON.stringify(p,null,2));"
             fi
-            node -e "const f=require('fs'),p=JSON.parse(f.readFileSync('package.json'));p.devDependencies=p.devDependencies||{};p.devDependencies.typescript='^5.0.0';f.writeFileSync('package.json',JSON.stringify(p,null,2));"
           fi
           
           mkdir -p .github/workflows
