--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -81,16 +81,22 @@ jobs:
             DUPES=$(grep -c '"devDependencies"' package.json || echo "0")
             if [ "$DUPES" -gt "1" ]; then
               echo "Fixing corrupted package.json..."
-              node -e "
-                const fs = require('fs');
-                const content = fs.readFileSync('package.json', 'utf8');
-                const nameMatch = content.match(/\"name\":\s*\"([^\"]+)\"/);
-                const name = nameMatch ? nameMatch[1] : 'unknown';
-                const depsMatch = content.match(/\"dependencies\":\s*\{[^}]*\}/);
-                const deps = depsMatch ? JSON.parse('{' + depsMatch[0] + '}').dependencies : {};
-                const pkg = { name, version: '1.0.0', dependencies: deps, devDependencies: { typescript: '^5.0.0' } };
-                fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
-              "
+              # Extract name from corrupted file
+              NAME=$(grep -o '"name":\s*"[^"]*"' package.json | head -1 | sed 's/.*"\([^"]*\)"$/\1/')
+              [ -z "$NAME" ] && NAME="${{ matrix.repo }}"
+              # Create fresh package.json
+              cat > package.json << PKGEOF
+{
+  "name": "$NAME",
+  "version": "1.0.0",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
+  }
+}
+PKGEOF
             else
               node -e "const f=require('fs'),p=JSON.parse(f.readFileSync('package.json'));p.devDependencies=p.devDependencies||{};p.devDependencies.typescript='^5.0.0';f.writeFileSync('package.json',JSON.stringify(p,null,2));"
             fi
