--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -33,15 +33,11 @@ jobs:
         run: node scripts/format-types.js || echo "No format script found, skipping"
       
       - name: Commit to Hub
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "EryAI Schema Bot"
           git config user.email "bot@eryai.tech"
-          git config --unset-all http.https://github.com/.extraheader || true
-          git remote set-url origin "https://shabajeric91-sketch:${GH_TOKEN}@github.com/eryai-tech/eryai-core-schema.git"
           git add types/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: update database types from supabase" && git push origin main)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: update database types from supabase" && git push)
       
       - name: Get EryAI repos
         id: get-repos
