--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -43,7 +43,6 @@ jobs:
       - name: Get EryAI repos
         id: get-repos
         run: |
-          # Hardcoded list - GH_TOKEN issue to be fixed later
           REPOS='["eryai-dashboard","eryai-engine","eryai-monitoring","eryai-sales","eryai-tech","eryai-demos","ery-ai-demo-restaurang"]'
           echo "repos=$REPOS" >> $GITHUB_OUTPUT
       
@@ -64,6 +63,10 @@ jobs:
         repo: ${{ fromJson(needs.generate.outputs.repos) }}
       fail-fast: false
     steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
@@ -74,33 +77,46 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git clone "https://x-access-token:${GH_TOKEN}@github.com/eryai-tech/${{ matrix.repo }}.git" spoke-repo
+          # Clone with token directly in URL (no x-access-token prefix)
+          git clone "https://${GH_TOKEN}@github.com/eryai-tech/${{ matrix.repo }}.git" spoke-repo
           cd spoke-repo
           
+          # Copy files
           mkdir -p types
           cp ../artifacts/types/database.types.ts types/database.types.ts
           cp ../artifacts/templates/jsconfig.json jsconfig.json
           
+          # Fix package.json using Node (not sed)
           if [ -f "package.json" ]; then
-            if ! node -e "JSON.parse(require('fs').readFileSync('package.json'))" 2>/dev/null; then
-              echo "Corrupted JSON detected, restoring..."
-              git checkout HEAD -- package.json
-            fi
-            
             node -e "
               const fs = require('fs');
-              const p = JSON.parse(fs.readFileSync('package.json', 'utf8'));
-              p.devDependencies = p.devDependencies || {};
-              p.devDependencies.typescript = '^5.0.0';
-              fs.writeFileSync('package.json', JSON.stringify(p, null, 2) + '\n');
-            "
+              let pkg;
+              try {
+                pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
+              } catch (e) {
+                console.log('Corrupted JSON, using git restore');
+                process.exit(1);
+              }
+              pkg.devDependencies = pkg.devDependencies || {};
+              pkg.devDependencies.typescript = '^5.0.0';
+              fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2) + '\n');
+            " || git checkout HEAD -- package.json
           fi
           
+          # Copy CI workflow
           mkdir -p .github/workflows
           cp ../artifacts/templates/ci.yml .github/workflows/ci.yml
           
+          # Git config
           git config user.name "EryAI Schema Bot"
           git config user.email "bot@eryai.tech"
-          git remote set-url origin "https://x-access-token:${GH_TOKEN}@github.com/eryai-tech/${{ matrix.repo }}.git"
+          
+          # CRITICAL: Kill any cached credentials from checkout
+          git config --local --unset-all http.https://github.com/.extraheader || true
+          
+          # Set remote with token (no x-access-token prefix)
+          git remote set-url origin "https://${GH_TOKEN}@github.com/eryai-tech/${{ matrix.repo }}.git"
+          
+          # Commit and push
           git add .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: sync from eryai-core-schema" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: sync from eryai-core-schema" && git push origin main)
